update list_items